arm/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nodered
  labels:
    app: nodered
