arm/03-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: nodered
  name: nodered
  labels:
    app: nodered
spec:
  selector:
    app: nodered
  ports:
    - protocol: TCP
      port: 1880
      targetPort: 1880
